--- a/router/router.yaml
+++ b/router/router.yaml
@@ -36,3 +36,16 @@ persisted_queries:
     require_id: false
 apq:
   enabled: false
+  
+authentication:
+  router:
+    jwt:
+      header_name: Authorization
+      header_value_prefix: Bearer
+      jwks:
+        - url: https://www.googleapis.com/service_accounts/v1/jwk/securetoken@system.gserviceaccount.com
+
+authorization:
+  require_authentication: false
+  preview_directives:
+    enabled: true
