--- a/router/router.yaml
+++ b/router/router.yaml
@@ -36,3 +36,10 @@ persisted_queries:
     require_id: false
 apq:
   enabled: false
+
+coprocessor:
+  url: https://coprocessor-wn3vwa6nlq-ue.a.run.app
+  timeout: 2s
+  router:
+    response:
+      body: true
